# sparktest

./: .agent-instructions.md  .env.example  .gitignore  .npmrc  .prettierignore  .vercelignore  CHANGESET_WORKFLOW.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  FLOW_DIAGRAM.md  GIT_HISTORY_REWRITE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MINIKUBE.md  MINIKUBE_ISSUE_RESOLUTION.md  PUBLISHING.md  README.md  REAL_DATA_IMPLEMENTATION.md  TESTING_CHANGESETS.md  WORKING_EXAMPLES.md  codecov.yml  create-issues.sh  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  pnpm-lock.yaml  railway.json  start-dev.sh  test-frontend-api.js  test-k8s-integration.js  tsconfig.base.json  vercel.json
.do/: app.yaml
.kube/: minikube-ca.crt  minikube-client.crt  minikube-client.key
backend/: Cargo.toml  KUBERNETES.md
backend/api/: Cargo.toml
backend/api/src/: handlers.rs  k8s.rs  routes.rs
backend/controller/: Cargo.toml  Dockerfile
backend/controller/src/: crd.rs  lib.rs  main.rs  reconciler.rs
backend/core/src/: db.rs  lib.rs  models.rs
backend/migrations/: 0001_create_tables.sql  0001_initial_schema_and_data.sql  0002_add_origin_and_k8s_ref.sql  0002_add_source_field.sql  0002_add_static_test_definitions.sql  0002_production_ready_data.sql  0002_seed.sql  0003_add_executor_id_to_definitions_and_runs.sql  0003_working_test_examples.sql  0004_working_test_examples.sql
backend/src/: k8s.rs  main.rs  validation.rs
backend/tests/: validation.rs
components/: run-details.tsx  suite-form.tsx  test-definitions-list.tsx
docs/: CHANGESET_WORKFLOW.md
frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.mjs  (+3 more)
(+772 files in other folders)
