[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_27"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-postgres = "0.7.13"
hyper = "1.6.0"
dotenv = "0.15.0"

